@@ -1,5 +1,10 @@
 # $Id$
 
+2007-11-15	Ivan Y. Khvostishkov
+
+	* core/Base/Assert.class.php: recursive objects cause a fatal error in
+	var_export(), so dumping via print_r() now.
+
 2007-11-14	Ivan Y. Khvostishkov
 
 	* main/Utils/ArrayUtils.class.php: countNonemptyValues(): try to guess
